# The-Fisher-Kolmogorov-equation-for-neurodegenerative-diseases

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: FiberFields.hpp  InitialConditions.hpp  NDAdaptiveSolver.hpp  NDConfig.hpp  NDProblem.hpp  NDThetaSolver.hpp  SeedingRegions.hpp  WhiteGrayPartition.hpp
meshes/: mesh-1D-centered.msh  mesh-square.geo  obj_slice_to_msh.py  slice_generated_.geo
results/2D_tests/preconditioner_benchmark/: benchmark_summary.txt
scripts/1D/: run_1d_experiment.sh  run_1d_single_test.sh  visualize_1d_experiment.py  visualize_spacetime_figure_3.py
scripts/2D/: compute_activation.py  generate_single_plot.py  run_preconditioner_benchmark.sh  visualize_2d_single_case.py
scripts/2D/figure_8/: ext_axn_alpha_sensitivity_analysis_figure_8.sh  run_single_fig8_test.sh  visualize_2d_figure_8.py
scripts/2D/figure_9/: fiber_seed_sensitivity_analysis_figure_9.sh  run_single_fig9_test.sh  visualize_2d_figure_9.py
src/: NDAnalysis1D.cpp  NDAnalysis2D.cpp  NDAnalysis3D.cpp  extract_boundary_to_obj.cpp  generate_1D_mesh.cpp
src/common/: FiberFields.cpp  NDConfig.cpp  NDThetaSolver.cpp  SeedingRegions.cpp
